# DataCheese

./: .coveragerc  .flake8  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: github-ci.yml
datacheese/: activations.py  clustering.py  convolution.py  exceptions.py  knn.py  neural_networks.py  processing.py  regression.py  utils.py
docs/img/: logo_full.pdn
docs/source/: activations.rst  api_documentation.rst  conf.py  index.rst  installation.rst  knn.rst  neural_networks.rst  processing.rst  regression.rst  utils.rst
tests/: test_activations.py  test_clustering.py  test_convolution.py  test_knn.py  test_neural_networks.py  test_processing.py  test_regression.py  test_utils.py
